Fixed the overlapping issue of submit button with progressbar in auto pagination - CU-19b4an

--- a/css/common.css
+++ b/css/common.css
@@ -229,6 +229,7 @@ footer.qsm-popup__footer button.qsm-popup-secondary-button:hover{
     padding: 0;
     position: absolute;
     z-index: 1;
+    margin-bottom: 15px;
 }
 .qmn_quiz_container.qsm_auto_pagination_enabled .quiz_section:not(.quiz_begin) {
     display: none;
